[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Captain.gd" type="Script" id=1]

[node name="Captain" type="Node2D"]
script = ExtResource( 1 )

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="CityTimer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
[connection signal="timeout" from="CityTimer" to="." method="_on_CityTimer_timeout"]
